# ffmpegDemo

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
rtsp_video_capture/: video_capture.cpp  video_capture.h
rtsp_video_record/: video_recoder.cpp  video_recoder.h
